--- a/index.html
+++ b/index.html
@@ -57,50 +57,22 @@
         </div>
       </nav>
     </header>
-    <!--<div class="about d-flex justify-content-between">
-    <div class="left">
-      <div class="info text-center">
-        <code>
-           <p class="code">class Team:<br>
-            def __init__(self, members): <br>
-            self.members = members<br>
-            def develop software(self):<br>
-            print <h4 class="work-in-progress">("work in progress...")</h4> <br>
-            print <h4 class="project-delivered">("project delivered!") </h4><br>
-            class Member:<br>
-            def __init__(self, name, role, email):<br>
-            self.name name<br>
-            self.role = role<br>
-            _name = '__main__': members = [<br>
-            if __name__ = '__main__':<br>
-            <strong>Member</strong>(name=<h5 class="text-danger">"Giuseppe Muntoni", role="Software engineer"</h5>),<br>
-            <strong>Member</strong>(name=<h5 class="text-white">"Giorgio Perez", role="Frontend developer"</h5> ),<br>
-            <strong>Member</strong>(name=<h5 class="text-success">"Michele Benigni", role="UX Designer"</h5>)<br>
-            ]<br>
-            team = Team(members)<br>
-            while(True):
-            <h4>team.develop_software()</h4>
-          </p>         
-          </code>
+    <div class="about d-flex justify-content-between">
+      <div class="left">
+        <div class="info text-center">
+          <img src="./img/proviamo.png" alt="" />
+        </div>
       </div>
-    </div>
-    <div class="right">
-      <div class="info d-flex">
-        <img class="img-about" src="./img/giuseppe.jpeg" alt="">
-        <div class="info">
-          Informazioni su Giuseppe
-        </div>
-        <img class="img-about" src="./img/giorgio.jpeg" alt="">
-        <div class="info">
-          Informazioni su Giorgio
-        </div>
-        <img class="img-about" src="./img/WhatsApp Image 2024-04-30 at 15.24.22.jpeg" alt="">
-        <div class="info">
-          Altre informazioni
+      <div class="right">
+        <div class="info d-flex">
+          <div class="g">
+            <img class="img-about" src="./img/giuseppe.jpeg" alt="" />
+          </div>
+          <img class="img-about" src="./img/giorgio.jpeg" alt="" />
+          <img class="img-about" src="./img/benignialtro.jpeg" alt="" />
         </div>
       </div>
     </div>
-  </div>-->
     <div class="giuseppe">
       <div class="info text-center">
         <h1>Giuseppe Muntoni</h1>
@@ -221,9 +193,10 @@
       <div class="info text-center">
         <h1>Michele Benigni</h1>
         <p>
-          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quaerat
-          commodi facere eum. Placeat aut labore sint iure corrupti, ipsam
-          atque?
+          I'm a skilled programmer and UX designer dedicated to crafting
+          engaging digital experiences. With a blend of technical expertise and
+          user-centric design, I
+          <strong>transform ideas into impactful digital solutions.</strong>
         </p>
         <a class="cv text-center" href="./img/Giorgio-PerezCV.pdf"
           >Read my resume</a
