--- a/index.html
+++ b/index.html
@@ -63,13 +63,53 @@
           <img src="./img/proviamo.png" alt="" />
         </div>
       </div>
-      <div class="right">
-        <div class="info d-flex">
-          <div class="g">
-            <img class="img-about" src="./img/giuseppe.jpeg" alt="" />
-          </div>
-          <img class="img-about" src="./img/giorgio.jpeg" alt="" />
-          <img class="img-about" src="./img/benignialtro.jpeg" alt="" />
+      <div class="right d-flex ">
+        <div class="uno">
+          <ul class="text-center">
+            <li><img class="img-about" src="./img/giuseppe.jpeg" alt=""></li>
+            <li><a class="text-decoration-none text-dark" href="mailto:"><i class="text-success fa-solid fa-envelope"></i> g.muntoni.cs@gmail.com</a></li>
+            <li><a class="text-decoration-none text-dark" href="3922680976"><i class="text-white fa-solid fa-phone"></i>+39 3922680976</a></li>
+            <li><address><i class="text-danger fa-solid fa-location-dot"></i> Pisa</address></li>
+            <div class="social">
+              <ul class="d-flex ">
+                <li><a class="text-secondary me-3 " href="http://"><i class="fa-brands fa-linkedin"></i></a></li>
+                <li><a class="text-secondary me-3" href="http://"><i class="fa-brands fa-facebook"></i></a></li>
+              </ul>
+
+            </div>
+          </ul>
+        </div>
+        <div class="due">
+          <ul class="text-center">
+            <li><img class="img-about" src="./img/fiori.jpeg" alt=""></li>
+            <li><a class="text-decoration-none text-dark" href="michelebenigni.mb@gmail.com"><i class="text-success fa-solid fa-envelope"></i> michelebenigni.mb@gmail.c</a></li>
+            <li><a class="text-decoration-none text-dark" href="3465100022"><i class="text-white fa-solid fa-phone"></i>+39 3465100022</a></li>
+            <li><address><i class=" text-danger fa-solid fa-location-dot"></i> Arezzo</address></li>
+            <div class="social">
+              <ul class="d-flex ">
+                <li><a class="text-secondary me-3 " href="http://"><i class="fa-brands fa-linkedin"></i></a></li>
+                <li><a class="text-secondary me-3" href="http://"><i class="fa-brands fa-facebook"></i></a></li>
+                <li><a class="text-secondary me-3" href="http://"><i class="fa-brands fa-instagram"></i></a></li>
+                <li><a class="text-secondary me-3" href="http://"><i class="fa-brands fa-tiktok"></i></a></li>
+              </ul>
+            </div>
+          </ul>
+        </div>
+        <div class="due">
+          <ul class="text-center">
+            <li><img class="img-about" src="./img/giorgio.jpeg" alt=""></li>
+            <li><a class="text-decoration-none text-dark" href="giorgiop62@gmail.com"><i class="text-success fa-solid fa-envelope"></i> giorgiop62@gmail.com</a></li>
+            <li><a class="text-decoration-none text-dark" href="3505255178"><i class="text-white fa-solid fa-phone"></i>+39 3505255178</a></li>
+            <li><address><i class="text-danger fa-solid fa-location-dot"></i> Napoli</address></li>
+            <div class="social">
+              <ul class="d-flex ">
+                <li><a class="text-secondary me-3 " href="http://"><i class="fa-brands fa-linkedin"></i></a></li>
+                <li><a class="text-secondary me-3" href="http://"><i class="fa-brands fa-facebook"></i></a></li>
+                <li><a class="text-secondary me-3" href="http://"><i class="fa-brands fa-instagram"></i></a></li>
+                <li><a class="text-secondary me-3" href="http://"><i class="fa-brands fa-youtube"></i></a></li>
+              </ul>
+            </div>
+          </ul>
         </div>
       </div>
     </div>
@@ -157,6 +197,13 @@
                 src="./img/html_original_wordmark_logo_icon_146478.png"
                 alt=""
               />
+              <li class="mx-3 mt-5">
+                <img
+                  class="skills"
+                  src="./img/react_original_wordmark_logo_icon_146375.png"
+                  alt=""
+                />
+              </li>
             </li>
             <li class="mx-3 mt-5">
               <img
@@ -221,6 +268,14 @@
                 alt=""
               />
             </li>
+            <li class="mx-3 mt-5">
+              <img
+                class="skills"
+                src="./img/react_original_wordmark_logo_icon_146375.png"
+                alt=""
+              />
+            </li>
+
             <li class="mx-3 mt-5">
               <img
                 class="skills"
