--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
       <div class="right d-flex ">
         <div class="uno">
           <ul class="text-center">
-            <li><img class="img-about" src="./img/giuseppe.jpeg" alt=""></li>
+            <li><img class="img-about" src="./img/superman.jpg" alt=""></li>
             <li><a class="text-decoration-none text-dark" href="mailto:"><i class="text-success fa-solid fa-envelope"></i> g.muntoni.cs@gmail.com</a></li>
             <li><a class="text-decoration-none text-dark" href="3922680976"><i class="text-white fa-solid fa-phone"></i>+39 3922680976</a></li>
             <li><address><i class="text-danger fa-solid fa-location-dot"></i> Pisa</address></li>
@@ -97,7 +97,7 @@
         </div>
         <div class="due">
           <ul class="text-center">
-            <li><img class="img-about" src="./img/giorgio.jpeg" alt=""></li>
+            <li><img class="img-about" src="./img/spiderman.jpg" alt=""></li>
             <li><a class="text-decoration-none text-dark" href="giorgiop62@gmail.com"><i class="text-success fa-solid fa-envelope"></i> giorgiop62@gmail.com</a></li>
             <li><a class="text-decoration-none text-dark" href="3505255178"><i class="text-white fa-solid fa-phone"></i>+39 3505255178</a></li>
             <li><address><i class="text-danger fa-solid fa-location-dot"></i> Napoli</address></li>
